edited config to add description

--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ name: blog
 author: Apertus Mentis
 author_email: apertus.mentis@gmail.com
 title: Blog
-description: where i share my thoughts
+description: where I share my thoughts
